# mlbook

./: .gitignore  README.md  appendix-linear-algebra.json  appendix-optimization.json  appendix-probability.json  appendix_linear_algebra.md  appendix_optimization.md  boosting.json  build_slides.sh  ch1-learning-problem.json  ch1_learning_problem.md  ch2-linear-regression.json  ch2_linear_regression.md  ch3-classification.json  ch3-generalization.json  ch4-generalization.json  ch4-probabilistic.json  ch4_generalization.md  ch4_probabilistic.md  ch5-probabilistic.json  clustering.json  cnn.json  config.json  ensembles.json  ensembles.md  generalization.json  generalization.md  generative-models.json  graphical-models.json  index.html  index.json  intro.md  kernel-methods.json  kernel_methods.md  knn.json  learning-problem.json  learning_problem.md  linear-classifiers.json  linear-regression.json  linear_regression.md  (+18 more)
.binder/: requirements.txt
_static/: custom.css
appendix-linear-algebra/: index.html
appendix-optimization/: index.html
appendix-probability/: index.html
boosting/: index.html
ch1-learning-problem/: index.html
ch2-linear-regression/: index.html
ch3-classification/: index.html
ch3-generalization/: index.html
ch4-generalization/: index.html
ch4-probabilistic/: index.html
ch5-probabilistic/: index.html
clustering/: index.html
cnn/: index.html
drafts/: boosting.md  cnn.md  generative_models.md  graphical_models.md  intro.md  knn.md  neural_networks.md  pca.md  svm.md
ensembles/: index.html
exercises/: tp0_knn.ipynb
(+20 files in other folders)
